@@ -1,3 +1,13 @@
+2005-01-24  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* examples/canvas.scm (main): Add return parameter example call
+	using receive.
+
+2005-01-23  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* gnome/gw/canvas-spec.scm (initialize): Add return parameter
+	override for double*.
+
 2004-11-16  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* examples/canvas.scm: Add line.
